--- a/httpd/src/main/res/layout/activity_main.xml
+++ b/httpd/src/main/res/layout/activity_main.xml
@@ -30,7 +30,8 @@
         <ListView
             android:id="@+id/lvMenu"
             android:layout_width="200dp"
-            android:layout_height="match_parent" />
+            android:layout_height="match_parent"
+            android:elevation="5dp"/>
 
         <LinearLayout
             android:id="@+id/layoutContainer"
