Modify icon and app name

--- a/web_app/src/billing/res/layout/activity_splash.xml
+++ b/web_app/src/billing/res/layout/activity_splash.xml
@@ -7,6 +7,15 @@
     android:gravity="center"
     android:orientation="vertical">
 
+
+
+    <TextView
+
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:text="智慧珠宝系统"
+        android:textSize="30sp" />
+
     <TextView
         android:id="@+id/tvLogo"
         android:layout_width="wrap_content"
@@ -22,7 +31,7 @@
             android:id="@+id/tvVersion"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
-            android:textSize="10sp" />
+            android:textSize="12sp" />
 
         <TextView
             android:id="@+id/tvDev"
@@ -36,6 +45,7 @@
 
     <ProgressBar
         android:id="@+id/progressBar"
+        android:visibility="visible"
         style="?android:attr/progressBarStyle"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
