--- a/web_app/src/collectapp/res/layout/activity_splash.xml
+++ b/web_app/src/collectapp/res/layout/activity_splash.xml
@@ -7,6 +7,14 @@
     android:gravity="center"
     android:orientation="vertical">
 
+
+    <TextView
+
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:text="智慧珠宝系统"
+        android:textSize="30sp" />
+
     <TextView
         android:id="@+id/tvLogo"
         android:layout_width="wrap_content"
@@ -36,6 +44,7 @@
 
     <ProgressBar
         android:id="@+id/progressBar"
+        android:visibility="visible"
         style="?android:attr/progressBarStyle"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
