--- a/web_app/src/main/res/layout/activity_printer_config.xml
+++ b/web_app/src/main/res/layout/activity_printer_config.xml
@@ -24,12 +24,21 @@
         android:textColor="#999"
         android:textSize="20sp" />
 
+    <TextView
+        android:id="@+id/key_current_config"
+        android:textColor="#788"
+        android:textSize="20sp"
+        android:layout_marginTop="35dp"
+        android:visibility="visible"
+        android:gravity="center"
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content" />
     <Button
         android:id="@+id/btnOK"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:padding="25dp"
-        android:layout_marginTop="100dp"
+        android:layout_marginTop="80dp"
         android:text="选中此设备"
         android:textSize="30sp"
         android:textColor="#333"/>
